# rpi-opengl

./: .clang-format  CMakeLists.txt  rpi.cmake
include/: event.h  input.h  shader.h  texture.h  utils.h  window.h
src/: event.cpp  input.cpp  main.cpp  shader.cpp  texture.cpp  utils.cpp  window.cpp
